--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <div class="header__buttons">
       <p class="header__button header__button-strips"><a class="header__button-link" href="index.html">Главная
       </a></p>
-      <p class="header__button-auth"><a class="header__button-link" href="loggedIn.html#loggedIn">Авторизоваться</a></p>
+      <p class="header__button-auth"><a class="header__button-link" href="loggedIn.html#greta">Авторизоваться</a></p>
     </div>
   </div>
   <div class="header__search">
@@ -34,6 +34,19 @@
 <main class="root root_theme-white">
 
   <!--Main_logged_in-->
+  <div class="preloader-container">
+    <i class="circle-preloader"></i>
+    <p class="preloader-text">Идет поиск новостей...</p>
+  </div>
+
+  <!--  </footer>-->
+
+  <!--Main_results_Not_found-->
+  <div class="preloader-container">
+    <img  class="preloader-not-found-image" src="<%=require('./images/notfound.svg')%>" alt="Картинка не найдена.">
+    <h2 class="preloader-not-found">Ничего не найдено</h2>
+    <p class="preloader-text">К сожалению, по вашему запросу ничего не найдено.</p>
+  </div>
 
   <!--Main_results_Not_logged in-->
   <section class="results">
@@ -42,7 +55,8 @@
       <div class="results__cards">
 
         <div class="card">
-          <img class="card__image card__image_parks" src="<%=require('./images/image_08.jpg')%>">
+          <img class="card__image card__image_parks" src="<%=require('./images/image_08.jpg')%>"
+               alt="Фото-иллюстрация новости.">
             <div class="marker-frame"><button class="marker marker-image"></button></div>
           <div class="card__description">
             <p class="card__date">2 август 2019</p>
@@ -54,7 +68,7 @@
         </div>
 
         <div class="card">
-          <img class="card__image card__image_flower" src="<%=require('./images/flower.jpg')%>">
+          <img class="card__image card__image_flower" src="<%=require('./images/flower.jpg')%>" alt="Фото-иллюстрация новости.">
             <div class="marker-frame"><button class="marker marker-image"></button></div>
 
           <div class="card__description">
@@ -68,7 +82,7 @@
         </div>
 
         <div class="card">
-          <img class="card__image card__image_leaves" src="<%=require('./images/leaves.jpg')%>">
+          <img class="card__image card__image_leaves" src="<%=require('./images/leaves.jpg')%>" alt="Фото-иллюстрация новости.">
             <div class="marker-frame marker-frame_info">
             <p class="marker
               marker-info">Войдите, чтобы сохранять статьи
@@ -111,7 +125,7 @@
 
   <div class="popup popup_signin">
     <div class="popup__content">
-      <img src="<%=require('./images/close.svg')%>" alt="" class="popup__close">
+      <img src="<%=require('./images/close.svg')%>" alt="Иконка закрыть." class="popup__close">
       <h3 class="popup__title">Вход</h3>
       <form class="popup__form signin-form" name="signin">
         <p class="popup__field-name">Email</p>
@@ -133,7 +147,8 @@
     <div class="header__main header__main-login header__main-login_theme-dark">
       <h1 class="header__title header__title_theme-dark">NewsExplorer</h1>
 
-        <img src="<%=require('./images/close.svg')%>" alt="" class="popup__close popup__close_theme-dark">
+        <img src="<%=require('./images/close.svg')%>" alt="Иконка закрыть."
+             class="popup__close popup__close_theme-dark">
 
     </div>
     <div class="popup__content popup_content_theme-dark">
@@ -145,7 +160,7 @@
   </div>
   <div class="popup popup_signup">
     <div class="popup__content popup__content_signup">
-      <img src="<%=require('./images/close.svg')%>" alt="" class="popup__close">
+      <img src="<%=require('./images/close.svg')%>" alt="Иконка закрыть." class="popup__close">
       <h3 class="popup__title">Регистрация</h3>
 
       <form class="popup__form signup-form" name="signup">
@@ -171,7 +186,7 @@
   </div>
   <div class="popup popup_success">
     <div class="popup__content">
-      <img src="<%=require('./images/close.svg')%>" alt="" class="popup__close">
+      <img src="<%=require('./images/close.svg')%>" alt="Иконка закрыть." class="popup__close">
       <h3 class="popup__title">Пользователь успешно зарегистрирован!</h3>
         <p class="popup__singup-text"><a class="popup__singup-link" href="">Выполнить вход</a></p>
       </form>
