Fix popups for JS

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <div class="header__buttons">
       <p class="header__button header__button-strips"><a class="header__button-link" href="index.html">Главная
       </a></p>
-      <p class="header__button-auth"><a class="header__button-link" href="loggedIn.html#greta">Авторизоваться</a></p>
+      <p class="header__button-auth"><a class="header__button-link">Авторизоваться</a></p>
     </div>
   </div>
   <div class="header__search">
