--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Дипломная работа Яндекс практикум."/>
   <meta name="author" content="Ivan Kho"/>
   <title>News Explorer</title>
-  <link rel="stylesheet"  href="main/main.247c5082f95d5e58f0b6.css">
+  <link rel="stylesheet"  href="main/main.6049d5ad1f8c55c4c0d6.css">
   <link rel="shortcut icon" href="src/images/N.svg" type="image/svg">
 </head>
 <body>
@@ -15,8 +15,9 @@
 <header class="header">
   <div class="header__main header__main-login">
     <h1 class="header__title">News Explorer</h1>
-    <div class="header__buttons">
-      <p class="header__button header__button-strips"><a class="header__button-link" href="index.html">Главная
+    <div class="header__buttons header__buttons_desc">
+      <p class="header__button header__button-strips"><a class="header__button-link"
+                                                                        href="index.html">Главная
       </a></p>
       <p class="header__button header__button-link header__button-link_inactive" style="display: none"><a
         class="header__button-link"
@@ -88,11 +89,11 @@
 
   <div class="popup popup_signin">
     <div class="popup__content">
-      <img src="" alt="Иконка закрыть." class="popup__close">
+      <img src="src/images/close.svg" alt="Иконка закрыть." class="popup__close">
       <h3 class="popup__title">Вход</h3>
       <form class="popup__form signin-form" name="signin">
         <p class="popup__field-name">Email</p>
-        <input type="email" name="email" class="popup__input popup__input_type_email form-text" pattern=''
+        <input type="email" name="email" class="popup__input popup__input_type_email form-text" pattern='([\w+\.\-]+)(@)([\w\.]+)'
                placeholder="Введите почту">
         <span class="warn error-email"> </span>
         <p class="popup__field-name">Пароль</p>
@@ -107,29 +108,30 @@
     </div>
   </div>
   <div class="popup popup_signin_theme-dark">
-    <div class="header__main header__main-login header__main-login_theme-dark">
-      <h1 class="header__title header__title_theme-dark">NewsExplorer</h1>
 
-        <img src="" alt="Иконка закрыть."
+    <div class="popup__content popup_content_theme-dark">
+      <div class="header__main header__main-login header__main-login_theme-dark">
+        <h1 class="header__title header__title_theme-dark">NewsExplorer</h1>
+
+        <img src="src/images/close.svg" alt="Иконка закрыть."
              class="popup__close popup__close_theme-dark">
 
-    </div>
-    <div class="popup__content popup_content_theme-dark">
-      <h3 class="popup__title popup__title_theme-dark">Главная</h3>
-      <h3 class="popup__title popup__title_theme-dark">Сохраненные статьи</h3>
+      </div>
+      <h3 class="popup__title popup__title_theme-dark"><a class="header__button-link" href="index.html">Главная</a></h3>
+      <h3 class="popup__title popup__title_theme-dark" ><a class="header__button-link" href="loggedIn.html">Сохраненные статьи</a></h3>
         <button class="form-lockedbutton form-lockedbutton_signin form-lockedbutton_theme-dark" type="submit">
           Авторизоваться</button>
     </div>
   </div>
   <div class="popup popup_signup">
     <div class="popup__content popup__content_signup">
-      <img src="" alt="Иконка закрыть." class="popup__close">
+      <img src="src/images/close.svg" alt="Иконка закрыть." class="popup__close">
       <h3 class="popup__title">Регистрация</h3>
 
       <form class="popup__form signup-form" name="signup">
         <p class="popup__field-name">Email</p>
         <input type="email" name="email_signup" class="popup__input popup__input_type_email form-text"
-              required pattern=''
+              required pattern='([\w+\.\-]+)(@)([\w\.]+)'
                placeholder="Введите почту">
         <span class="warn error-email_signup"> </span>
         <p class="popup__field-name">Пароль</p>
@@ -149,13 +151,14 @@
   </div>
   <div class="popup popup_success">
     <div class="popup__content">
-      <img src="" alt="Иконка закрыть." class="popup__close">
+      <img src="src/images/close.svg" alt="Иконка закрыть." class="popup__close">
       <h3 class="popup__title">Пользователь успешно зарегистрирован!</h3>
         <p
           class="popup__singup-text"><a class="popup__singup-link popup__singup-link_sc" href="">Выполнить вход</a></p>
       </form>
     </div>
   </div>
+
 
 </main>
 <footer class="footer">
@@ -182,7 +185,7 @@
 
 
 <script
-  src="main/main.67f5b85bb35fb709d6d7.js"
+  src="main/main.b8350394a18b7f3a0f52.js"
   type="text/javascript"
 ></script>
 
