Fix search form warns & popups

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
       class="form-field">
       <input class="form-text form__search" type="text" placeholder="Введите тему новости" required>
       <button class="form-button form-button__search">Искать</button>
+<!--              disabled="disabled"-->
+
     </div>
   </div>
 </header>
