--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       class="form-field">
       <input class="form-text form__search" type="text" placeholder="Введите тему новости" required>
       <button class="form-button form-button__search">Искать</button>
+<!--              disabled="disabled"-->
+
     </div>
   </div>
 </header>
@@ -185,7 +187,7 @@
 
 
 <script
-  src="main/main.7e5cfa0d62431a170af0.js"
+  src="main/main.670755e15bffa70ca3fb.js"
   type="text/javascript"
 ></script>
 
