--- a/loggedIn.html
+++ b/loggedIn.html
@@ -17,7 +17,7 @@
     <h1 class="header__title header__title_theme-white">News Explorer</h1>
     <div class="header__buttons">
       <p class="header__button header__button-link header__button-link_theme_white header__button-link_inactive"><a
-        href="../index.html" class="header__button-link_theme_white">Главная</a></p>
+        href="./index.html" class="header__button-link_theme_white">Главная</a></p>
       <p class="header__button header__button-link header__button-link_theme_white"><a
         href="loggedIn.html#saved" class="header__button-link_theme_white">Сохраненные статьи</a></p>
       <p class="header__button-auth header__button-auth_theme-white">
@@ -90,7 +90,7 @@
 
 
 <script
-  src="saved/saved.670755e15bffa70ca3fb.js"
+  src="saved/saved.f64926141cafa65bdecd.js"
   type="text/javascript"
 ></script>
 
